<resources>
    <string name="app_name">Femina</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Femina</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_cerrarSesion">Cerrar Sesión</string>
    <string name="action_finalizar">Finalizar App</string>

    <string name="menu_Testimonios">Testimonios</string>
    <string name="menu_mis_datos">Mis datos</string>
    <string name="menu_ayuda">Ayuda</string>
    <string name="menu_crear_icono">Crear icono</string>
    <string name="menu_test_volencia">Test violencia</string>
    <string name="menu_que_hacer">¿Que hacer?</string>
    <string name="menu_contactos_emergencia">Contactos de Emergencia</string>

    <string name="menu_test_violencia_finalizar">Finalizar Test</string>


    <string name="menu_que_es_femina">Femina es una aplicacion para prevenir la violencia de genero, permite enviar una alerta a tus contactos con tu ubicacion para que puedan ubicarte y ayudarte en caso de riesgo</string>
    <string name="menu_ayuda_testimonio">Testimonio</string>
    <string name="menu_ayuda_testimonio_descripcion">En esta seccion podran apreciar testimonios positivos a travez de audios y videos de mujeres supervivientes de violencia de genero.</string>
    <string name="menu_ayuda_contactos_emergencia">Contactos de Emergencia</string>
    <string name="menu_ayuda_contactos_emergencia_descripcion">Esta opción permite registrar hasta 4 contactos de emergencia (personas que sean de su confianza) para que puedan ayudarte en caso de ayuda inmediata.</string>
    <string name="menu_ayuda_test_violencia">Test de Violencia</string>
    <string name="menu_ayuda_test_violencia_descripcion">El test consta de un cuestionario y una conclusion final si tienes o no una relacion con signos de violencia.Este test pretende, entre otras cosas, generar conciencia en una sociedad muy golpeada por este tipo de violencia. </string>


    <string name="menu_testViolencia_test_violencia">Cuando se habla de violencia de genero automaticamente pensamos en agresiones fisicas, amenazas, abuso sexual y femicidios, sin embargo la violencia puede presentarse en situaciones cotidianas en una relacion de pareja y muchas veces pasar desapercibida.Este test no solo pretende brindar medios de apoyo y asistencia a quienes son victimas de relaciones violentas, si no tambien generar conciencia y convertirnos en agentes multiplicadores de una sociedad libre de violencia.</string>
    <string name="menu_testViolencia_empezar_test">Empezar Test</string>


    <string name="nombre_usuario">Nombre Usuario</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="telefono">Telefono</string>
    <string name="femenino">Femenino</string>
    <string name="masculino">Masculino</string>
    <string name="sexo">Sexo</string>
    <string name="guardar">Guardar</string>
    <string name="si">Si</string>
    <string name="proxima_pregunta">Proxima pregunta</string>
    <string name="pregunta_anterior">Pregunta anterior</string>
    <string name="no">No</string>

    <string name="registrarse">Registrarse</string>
    <string name="registro">Registro</string>
    <string name="ingresar">Ingresar</string>
    <string name="olvidaste">Olvidaste tu contraseña?</string>

    <string name="femina_mayus">FEMINA</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Prueba</string>

    <string-array name="sexo_array">
        <item>Masculino</item>
        <item>Femenino</item>
        <item>Otro</item>
    </string-array>

    <string name="no_hay_contactos">No tienes contactos aun</string>

    <string name="no_hay_articulos">No existen articulos aun</string>

    <string name="agregar_contacto">Agregar contacto</string>

    <string name="agregar_articulo">Agregar articulo</string>

    <string name="fecha">Fecha</string>

    <string name="relevancia">Relevancia</string>

    <string name="guardar_cambios">Guardar cambios</string>

    <string name="borrar_Articulo">Borrar articulo</string>

    <string name="existente">Agregar existente</string>

    <string name="ae_contacto">Accion</string>

    <string name="eliminar">Eliminar</string>
    <string name="modificar">Modificar</string>

    <string-array name="gestion_contacto">
        <item>Llamar</item>
        <item>Modificar</item>
        <item>Eliminar</item>
    </string-array>

    <string name="telefonodospuntos">Telefono: </string>
    <string name="categoria">Categoria</string>
    <string name="nombredospuntos">Nombre: </string>
    <string name="updateVideo">Video</string>
    <string name="updateAudio">Audio</string>
    <string name="titulo">Titulo</string>

   <string-array name="gestion_video">
        <item>Modificar</item>
        <item>Eliminar</item>
   </string-array>

   <string-array name="gestion_audio">
        <item>Modificar</item>
        <item>Eliminar</item>
   </string-array>

    <string-array name="gestion_icono">
        <item>Seleccionar</item>
    </string-array>

    <string name="categoriadospuntos">Categoria: </string>
    <string name="titulodospuntos">Titulo: </string>
    <string name="urldospuntos">Url: </string>

    <string name="descripcion">Descripcion</string>

    <string-array name="gestion_foto">
        <item>Eliminar foto</item>
        <item>Cambiar foto</item>
    </string-array>

    <string-array name="SINO">
        <item>Si</item>
        <item>No</item>
    </string-array>

    <string-array name="Dialogo_articulos">
        <item>Ver detalle</item>
        <item>Modificar</item>
        <item>Eliminar</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="zero">0.00</string>


    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>

    <string name="ingrese_usuario">Ingrese el usuario a recuperar</string>

    <string name="aceptar">Aceptar</string>

    <string name="PERFIL_INICIO">MIS DATOS</string>
    <string name="CONTACTOS_INICIO">CONTACTOS</string>
    <string name="TEST_INICIO">TEST</string>
    <string name="AYUDA_INICIO">AYUDA</string>
    <string name="QUE_HACER_INICIO">QUE HACER?</string>
    <string name="TESTIMONIOS_INICIO">TESTIMONIOS</string>
    <string name="ICONO_INICIO">CAMBIAR ICONO</string>

    <string name="INICIO_RAPIDO">Accesibilidad</string>

    <string name="Recordar">Recordar usuario!</string>

    <string name="secuencia">Mi secuencia</string>

    <string name="misecuencia">Mi secuencia</string>

    <string name="NO_BIEN">NO ME ENCUENTRO BIEN</string>

    <string name="SI_BIEN">ME ENCUENTRO BIEN</string>

    <string name="desactivar_sos">Desactivar ayuda</string>

    <string name="aviso_desactivar">Para desactivar la alerta SOS, indicanos tu situacion actual.</string>

    <string name="aviso_adicional">* Recordá solo hacerlo si te
        encuentras fuera de peligro. *</string>

    <string name="ingrese_contraseña">Ingrese su contraseña</string>

    <string name="cancelar">Cancelar</string>


</resources>
