<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFE6E6">

    <TextView
        android:id="@+id/txtPregunta1"
        android:layout_width="222dp"
        android:layout_height="94dp"
        android:visibility="visible"
        tools:layout_editor_absoluteX="116dp"
        tools:layout_editor_absoluteY="221dp"
        tools:text="Te controla el dinero, la forma de vestir, tus llamadas , tus lecturas, tus relaciones, tu tiempo"
        tools:visibility="visible" />

    <RadioButton
        android:id="@+id/rb_pregunta_1_si"
        android:layout_width="116dp"
        android:layout_height="37dp"
        android:text="@string/si"
        tools:layout_editor_absoluteX="60dp"
        tools:layout_editor_absoluteY="347dp" />

    <RadioButton
        android:id="@+id/rb_pregunta_1_no"
        android:layout_width="116dp"
        android:layout_height="37dp"
        android:text="@string/no"
        tools:layout_editor_absoluteX="257dp"
        tools:layout_editor_absoluteY="347dp" />

    <Button
        android:id="@+id/btn_pregunta_1_proxima"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proxima_pregunta"
        tools:layout_editor_absoluteX="125dp"
        tools:layout_editor_absoluteY="424dp" />

    <Button
        android:id="@+id/btn_pregunta_1_anterior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pregunta_anterior"
        tools:layout_editor_absoluteX="123dp"
        tools:layout_editor_absoluteY="499dp" />

</androidx.constraintlayout.widget.ConstraintLayout>