<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_cerrarSesion"
        android:orderInCategory="100"
        android:title="@string/action_cerrarSesion"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_finalizar"
        android:orderInCategory="100"
        android:title="@string/action_finalizar"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_search"
        android:layout_width="15dp"
        android:layout_height="90dp"
        android:icon="@drawable/ic_search"
        android:title="Search"
        android:visible="false"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/btn_agregar_existente"
        android:layout_width="15dp"
        android:layout_height="90dp"
        android:icon="@android:drawable/stat_notify_chat"
        android:title="@string/existente"
        android:visible="false"
        app:showAsAction="ifRoom"
        app:actionViewClass="android.widget.Button" />

    <item
        android:id="@+id/add_video"
        android:layout_width="15dp"
        android:layout_height="90dp"
        android:icon="@android:drawable/ic_menu_add"
        android:title="Add video"
        android:visible="false"
        app:showAsAction="ifRoom" />


</menu>